# PythonProject_studio_inventory

./: .gitignore  pyproject.toml
art_studio_org/: Read_Line_Items.py  cli.py  cli.py.bak  ingest_all.py.bak  main.py  main.py.bak
art_studio_org/labels/: make_pdf.py
art_studio_org/vendors/: mcmaster.py  registry.py
src/studio_inventory/: cli.py  cli.py.bak  db.py  db.py.bak  main.py  paths.py
vendors/: base.py  digikey.py  mcmaster.py  registry.py
